# parquet-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp-linter.yml  sanitizer_test.yml  test.yml
ci/scripts/: build_example.sh  build_parquet.sh
cmake_modules/: ParquetBuildUtils.cmake  ParquetSanitizer.cmake
docker/: Dockerfile  docker-compose.yml
example/: CMakeLists.txt  demo_example.cc
src/: CMakeLists.txt
src/parquet/: CMakeLists.txt  ParquetConfig.cmake.in  exception.h  platform.h
